    - Applied Ivanilton Polato's patch for handling multi-line fields in CSV export.
    - Fixed bug: "Send as Email" did not handle absolute paths correctly.
    - Fixed bug 3472991: Search : "Highlight Words" inconsistent
    - Fixed bug 2933201: Exporting InProceedings to Word 2007
    - Fixed bug 3146059: Error in translating author field to MS Office
    - Fixed bug: entering field names containing capital letters in table columns tab
      in Preferences makes the columns empty.
2.8 beta
    - Fixed issues with ACM portal fetcher using Benjamin Langmann's patch, plus an
      additional minor fix.
    - A large list of journal abbreviations is now loaded by default.
    - Added global option to allow file links relative to the bib file location, in addition
      to the global or database- or user-specific file directory.
    - Fixed bug 3434674: Reviewing changes overwrites groups.
    - Integrated the plugin for interaction with OpenOffice/LibreOffice as a standard part
      of JabRef.
    - Added keyboard shortcuts Ctrl-Up and Ctrl-Down to move file links up and down in a list
      of external links in the entry editor.
    - Applied "bjoerntm"'s patch for making the loading of group information less sensitive
      to white space, in order to prevent trouble loading files written by other tools.
    - Added optional autocompletion of author/editor last names in search field.
    - Changed entry fetcher system so all fetchers are accessed from a single side pane
      component with a selector.
    - Added INSPIRE fetcher by Sheer El-Showk.
    - Improved error handling when importing in specific format.
    - Prevented crash when calling invalid import format on startup.
    - Improved duplicate detection.
    - Added markers \filename and \filepath for ".begin.layout" and ".end.layout" files
      in order to output the name or full path of the bib file of the exported database.
    - Fixed possible array index exception in LastPage formatter.