@@ -1,3 +1,4 @@
+    - Applied Nicolas Pavillon's patch for proper keystroke handling on Mac OS X.
     - Applied Ivanilton Polato's patch for handling multi-line fields in CSV export.
     - Fixed bug: "Send as Email" did not handle absolute paths correctly.
     - Fixed bug 3472991: Search : "Highlight Words" inconsistent
